test/org/midica/testfiles/failing/note-unknown.midica
INCLUDE inc/instruments.midica

0 c+6 /4
